# gddi-rknpu2-android

./: local.properties  settings.gradle
app/: .gitignore  build.gradle
app/src/androidTest/java/com/example/gddandroid/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  facedetect.cpp  facedetect.h  native-lib.cpp
app/src/main/cpp/gdd_sdk/: CMakeLists.txt  README.md  demo.h
app/src/main/cpp/gdd_sdk/cmake/: rk_android.cmake
app/src/main/cpp/gdd_sdk/docs/: android使用说明.md
app/src/main/cpp/gdd_sdk/include/api/: global_config.h  infer_api.h  processor_api.h  session_api.h
app/src/main/cpp/gdd_sdk/include/app/: result_handle.h  runner_dataset.h  runner_pic.h  runner_video.h
app/src/main/cpp/gdd_sdk/include/capi/: processor_api_c.h  result_def_c.h
app/src/main/cpp/gdd_sdk/include/common/: config.h  data_queue.h  json.hpp  logger.h  mem.h  meta.h  rk_rga_mem.h  tensor.h  type_convert.h  util.h
app/src/main/cpp/gdd_sdk/include/common/gddeploy_spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  fwd.h  logger-inl.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h
app/src/main/cpp/gdd_sdk/include/common/gddeploy_spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
app/src/main/cpp/gdd_sdk/include/common/gddeploy_spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h
app/src/main/cpp/gdd_sdk/include/common/gddeploy_spdlog/fmt/: bin_to_hex.h  fmt.h
app/src/main/cpp/gdd_sdk/include/common/gddeploy_spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
app/src/main/cpp/gdd_sdk/include/core/: alg.h  buffer.h  cv.h  device.h  infer_server.h  model.h  model_properties.h  picture.h  pipeline.h  postprocess.h  predictor.h  preprocess.h  processor.h  register.h  result_def.h  shape.h
app/src/main/cpp/gdd_sdk/include/core/mem/: buf_surface.h  buf_surface_impl.h  buf_surface_util.h
app/src/main/cpp/gdd_sdk/include/core/util/: any.h  base_object.h
app/src/main/cpp/gdd_sdk/include/opencv2/: cvconfig.h
app/src/main/cpp/gdd_sdk/lib2/: libgddeploy_register.so.1.1.0
app/src/main/cpp/gdd_sdk/sample/: CMakeLists.txt  README.md  sample_add_processor.cpp  sample_android.cpp  sample_api_async.cpp  sample_api_multi_mem.cpp  sample_api_multi_model_async.cpp  sample_api_multi_model_sync_add_processor.cpp  sample_api_sync_multi_data.cpp  sample_api_sync_only_infer.cpp  sample_ascend_ss928.cpp  sample_processor_api.cpp  sample_runner_dataset.cpp  sample_runner_pic.cpp  sample_runner_pic_c.c  sample_runner_video.cpp  test_ascend3403  test_nvjpeg.cpp  test_only_infer.cpp
app/src/main/cpp/gdd_sdk/sample/CommandParser/: CommandParser.cpp  CommandParser.h
app/src/main/cpp/gdd_sdk/sample/api/: CMakeLists.txt  README.md  global_config.cpp  infer_api.cpp  processor_api.cpp  processor_api_c.cpp  processor_api_c.h  session_api.cpp
app/src/main/cpp/gdd_sdk/sample/app/: CMakeLists.txt  result_handle.cpp  runner_dataset.cpp  runner_pic.cpp  runner_video.cpp
app/src/main/cpp/gdd_sdk/sample/app/pic/: nvjpeg.cpp  nvjpeg.h
app/src/main/cpp/gdd_sdk/sample/app/video/: video_decode_ffmpeg.cpp  video_decode_ffmpeg.h
app/src/main/cpp/gdd_sdk/sample/app/video/rk/: mpp_decoder.cpp  mpp_decoder.h
app/src/main/cpp/gdd_sdk/sample/common/: CMakeLists.txt  README.md  avframe2mat.cpp  common.cpp  common.h  logger.cpp  registry.cpp  type_convert.cpp  util.cpp
app/src/main/cpp/gdd_sdk/tools/: gxt_maker
app/src/main/cpp/sdk/java/: AndroidManifest.xml
app/src/main/java/com/example/gddandroid/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/raw/: license
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/gddandroid/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
